# wallpaper

./: .gitignore  AGENTS.md  AGENTS_TEMPLATE.md  Cargo.toml  LICENSE  README.md  g.bat  skills-lock.json
.claude/: settings.local.json
.codex/: hooks.json
.tokensave/: branch-meta.json  config.json  dirty  tokensave.db  tokensave.db-shm  tokensave.db-wal
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json
graphify-out/2026-07-06/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/cache/: stat-index.json
src/: app.rs  i18n.rs  image_ops.rs  main.rs  settings.rs  slideshow.rs  startup.rs  state.rs  wallpaper.rs
src/app/: mod.rs
src/i18n/: mod.rs
src/image_ops/: mod.rs
src/settings/: mod.rs
src/slideshow/: mod.rs
src/startup/: mod.rs
src/state/: mod.rs
src/theme/: mod.rs
src/wallpaper/: mod.rs  wallpaper.rs
