[package]
name = "wallpaper_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
directories = "5.0"
eframe = { version = "0.27", default-features = false, features = ["wgpu"] }
egui = "0.27"
image = "0.25"
rand = "0.8"
rand_chacha = "0.3"
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tray-icon = "0.21.2"
walkdir = "2.5"
winreg = "0.52"
windows = { version = "0.56", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
